# nortl

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: deploy_pages.yml  publish.yml  test.yml  test_and_publish.yml
docs/scripts/: gen_ref_pages.py
docs/src/: index.md
docs/src/user_guide/: data_model.md  engine.md  installation.md  meta_data.md
src/nortl/: __init__.py
src/nortl/algorithms/: __init__.py  empty_state_removal.py  reachability.py  scratch_reordering.py  state_breakout.py  state_merger.py
src/nortl/components/: __init__.py  channel.py  timer.py
src/nortl/core/: __init__.py  checker.py  engine.py  exceptions.py  modifiers.py  module.py  operations.py  parameter.py  process.py  protocols.py  signal.py  state.py  tracing.py
src/nortl/core/common/: __init__.py  access.py  debug.py  naming_helper.py
src/nortl/core/constructs/: __init__.py  condition.py  fork_join.py  loop.py  segment.py  utils.py
src/nortl/core/manager/: __init__.py  scratch_manager.py  signal_manager.py
src/nortl/core/renderers/operations/: __init__.py  arithmetics.py  base.py  comparison.py  logic.py  misc.py  sequences.py  slice.py  ternary.py
src/nortl/renderer/: __init__.py  mermaid_renderer.py  networkx_renderer.py  scratchpad_visualization_renderer.py  verilog_renderer.py
src/nortl/renderer/verilog_utils/: __init__.py  abstractions.py  formatter.py  process.py  structural.py  utils.py
src/nortl/utils/: operand_extraction.py  parse_utils.py  test_wrapper.py  type_aliases.py
src/nortl/utils/templates/: testbench.sv
src/nortl/verilog_library/: __init__.py  nortl_clock_gate.sv  nortl_count_down_timer.sv  nortl_delay.sv  nortl_edge_detector.sv  nortl_sync.sv
tests/algorithms/: test_empty_state_removal.py  test_reachability.py  test_scratch_reordering.py  test_state_breakout.py  test_state_merger.py
tests/algorithms/artifacts/: .gitignore
tests/components/: test_channel.py  test_timer.py
tests/components/verilog/: tb_timer.sv
tests/constructs/: test_access_control.py  test_fork.py
tests/constructs/artifacts/: .gitignore
tests/constructs/segments/: conftest.py  test_call.py  test_decoration.py  test_slots.py
tests/examples/: conftest.py  test_video_controller.py
tests/fsm/: test_cg_insertion.py  test_fsm.py  test_managementmixin.py  test_scratch_manager.py  test_scratch_signal_management.py  test_state.py  test_verilog_integration.py
tests/fsm/verilog/: testbench.sv
tests/operations/: conftest.py  test_concat.py  test_const.py  test_const_propagation.py  test_if_then_else.py  test_logical.py  test_operations.py
tests/renderers/: test_mermaid_renderer.py  test_networkx_renderer.py  test_scratchpad_visualization_renderer.py
tests/test_utils/: test_test_wrapper.py
tests/utils/: test_compatibility.py  test_condition.py  test_extract_operands.py
tests/verilog_utils/: test_declaration.py
